--- a/index.html
+++ b/index.html
@@ -96,4 +96,494 @@
       box-shadow: 0 6px 18px rgba(0, 0, 0, 0.8);
     }
 
-    .locat
+    .location-pill {
+      background: radial-gradient(circle at top,
+          #00f6ff 0,
+          #001f2f 45%,
+          #050510 100%);
+      color: var(--ac-brown);
+      padding: 6px 18px;
+      border-radius: 999px;
+      font-weight: 900;
+      font-size: 1.05rem;
+      letter-spacing: 0.12em;
+      text-transform: uppercase;
+      border: 1px solid rgba(0, 246, 255, 0.9);
+      box-shadow: 0 0 12px rgba(0, 246, 255, 0.9),
+        0 0 22px rgba(255, 0, 255, 0.5);
+      text-shadow: 0 0 8px rgba(0, 0, 0, 0.8);
+    }
+
+    .update-pill {
+      font-family: 'Share Tech Mono', monospace;
+      font-size: 0.78rem;
+      color: var(--ac-dark);
+      background: rgba(5, 5, 20, 0.8);
+      padding: 6px 12px;
+      border-radius: 999px;
+      border: 1px solid rgba(255, 255, 255, 0.18);
+      text-transform: uppercase;
+      letter-spacing: 0.18em;
+    }
+
+    .container {
+      padding: 22px 18px;
+      max-width: 600px;
+      margin: 0 auto;
+      position: relative;
+      z-index: 1;
+    }
+
+    /* === 核心：今日焦點卡片（霓虹玻璃卡） === --------------------------- */
+    .hero-card {
+      background: var(--ac-cream);
+      border-radius: 28px;
+      padding: 26px 22px;
+      text-align: center;
+      border: 1px solid var(--ac-card-border);
+      margin-bottom: 25px;
+      position: relative;
+      box-shadow:
+        0 0 20px rgba(0, 246, 255, 0.7),
+        0 0 40px rgba(255, 0, 255, 0.5);
+      backdrop-filter: blur(18px);
+      overflow: hidden;
+    }
+
+    .hero-card::before,
+    .hero-card::after {
+      content: "";
+      position: absolute;
+      inset: -40%;
+      background: conic-gradient(from 180deg,
+          transparent 0,
+          rgba(0, 246, 255, 0.4) 25%,
+          rgba(255, 0, 255, 0.35) 50%,
+          transparent 75%);
+      opacity: 0.25;
+      mix-blend-mode: screen;
+      animation: rotate-glow 12s linear infinite;
+      pointer-events: none;
+    }
+
+    .hero-card::after {
+      animation-direction: reverse;
+      opacity: 0.18;
+    }
+
+    @keyframes rotate-glow {
+      0% {
+        transform: rotate(0deg);
+      }
+
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+
+    /* 像對話泡泡，但變成時間段標籤 */
+    .hero-period {
+      position: absolute;
+      top: -14px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: linear-gradient(135deg, #ff00ff, #00f6ff);
+      color: #050510;
+      padding: 5px 22px;
+      border-radius: 999px;
+      font-weight: bold;
+      border: 2px solid #ffffff;
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.6);
+      text-transform: uppercase;
+      letter-spacing: 0.16em;
+      font-size: 0.75rem;
+    }
+
+    .hero-temp-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 12px;
+      margin: 18px 0;
+    }
+
+    .hero-icon {
+      font-size: 4.6rem;
+      filter:
+        drop-shadow(0 0 10px rgba(0, 246, 255, 0.9))
+        drop-shadow(0 0 18px rgba(255, 0, 255, 0.6));
+      animation: bounce 3s infinite;
+    }
+
+    @keyframes bounce {
+
+      0%,
+      100% {
+        transform: translateY(0);
+      }
+
+      50% {
+        transform: translateY(-8px);
+      }
+    }
+
+    .hero-temp {
+      font-size: 4.2rem;
+      font-weight: 900;
+      color: var(--ac-brown);
+      line-height: 1;
+      text-shadow:
+        0 0 16px rgba(0, 246, 255, 1),
+        0 0 32px rgba(255, 0, 255, 0.8);
+    }
+
+    .hero-desc {
+      font-size: 1.3rem;
+      color: var(--ac-dark);
+      margin-bottom: 20px;
+      font-weight: 700;
+      letter-spacing: 0.12em;
+      text-transform: uppercase;
+      font-family: 'Share Tech Mono', monospace;
+    }
+
+    /* === 快速建議區（維持兩格，但換成賽博小卡） ------------------------- */
+    .advice-grid {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 14px;
+      margin-top: 18px;
+      padding-top: 18px;
+      border-top: 1px dashed rgba(255, 255, 255, 0.25);
+    }
+
+    .advice-item {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background: radial-gradient(circle at top,
+          rgba(0, 246, 255, 0.16),
+          rgba(5, 5, 20, 0.95));
+      padding: 12px 10px;
+      border-radius: 18px;
+      border: 1px solid rgba(0, 246, 255, 0.5);
+      box-shadow:
+        0 0 12px rgba(0, 246, 255, 0.5),
+        0 0 18px rgba(255, 0, 255, 0.4);
+    }
+
+    .advice-icon {
+      font-size: 2rem;
+      margin-bottom: 4px;
+      filter: drop-shadow(0 0 6px rgba(0, 246, 255, 0.8));
+    }
+
+    .advice-text {
+      font-size: 1.15rem;
+      font-weight: 900;
+      color: var(--ac-brown);
+      margin: 4px 0;
+      line-height: 1.2;
+    }
+
+    /* 標題 -------------------------------------------------------- */
+    .section-title {
+      font-size: 1.1rem;
+      color: var(--ac-brown);
+      margin-bottom: 14px;
+      margin-left: 4px;
+      font-weight: 900;
+      text-shadow:
+        0 0 12px rgba(0, 246, 255, 0.8),
+        0 0 18px rgba(255, 0, 255, 0.6);
+      letter-spacing: 0.18em;
+      text-transform: uppercase;
+      font-family: 'Share Tech Mono', monospace;
+    }
+
+    /* 橫向滑動預報區 ------------------------------------------------ */
+    .scroll-container {
+      display: flex;
+      overflow-x: auto;
+      gap: 15px;
+      padding-bottom: 10px;
+      scrollbar-width: none;
+      -ms-overflow-style: none;
+    }
+
+    .scroll-container::-webkit-scrollbar {
+      display: none;
+    }
+
+    .mini-card {
+      min-width: 140px;
+      background: rgba(10, 10, 30, 0.95);
+      border-radius: 22px;
+      padding: 18px 14px;
+      text-align: center;
+      border: 1px solid rgba(0, 246, 255, 0.6);
+      flex-shrink: 0;
+      box-shadow:
+        0 0 14px rgba(0, 246, 255, 0.6),
+        0 0 24px rgba(255, 0, 255, 0.4);
+      backdrop-filter: blur(16px);
+      position: relative;
+      overflow: hidden;
+    }
+
+    .mini-card::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: linear-gradient(135deg,
+          rgba(0, 246, 255, 0.18),
+          transparent 40%,
+          rgba(255, 0, 255, 0.2));
+      opacity: 0.5;
+      mix-blend-mode: soft-light;
+      pointer-events: none;
+    }
+
+    .mini-time {
+      background: var(--ac-green);
+      color: #050510;
+      padding: 3px 10px;
+      border-radius: 999px;
+      font-size: 0.78rem;
+      display: inline-block;
+      margin-bottom: 8px;
+      font-weight: bold;
+      text-transform: uppercase;
+      letter-spacing: 0.08em;
+    }
+
+    .mini-icon {
+      font-size: 2.3rem;
+      margin: 6px 0;
+      filter: drop-shadow(0 0 8px rgba(0, 246, 255, 0.9));
+    }
+
+    .mini-temp {
+      font-size: 1.1rem;
+      font-weight: 800;
+      color: var(--ac-brown);
+    }
+
+    /* Loading 畫面 -------------------------------------------------- */
+    .loading-screen {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background:
+        radial-gradient(circle at center, #2b1055 0, #050510 45%, #000 100%);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      z-index: 999;
+    }
+
+    .loading-screen p {
+      color: var(--ac-brown);
+      font-weight: bold;
+      margin-top: 18px;
+      font-family: 'Share Tech Mono', monospace;
+      letter-spacing: 0.18em;
+      text-transform: uppercase;
+      font-size: 0.82rem;
+    }
+
+    .loading-screen .emoji {
+      font-size: 4rem;
+      animation: bounce 2s infinite;
+      filter:
+        drop-shadow(0 0 10px rgba(0, 246, 255, 0.9))
+        drop-shadow(0 0 18px rgba(255, 0, 255, 0.7));
+    }
+
+    /* RWD ----------------------------------------------------------- */
+    @media (max-width: 640px) {
+      .container {
+        padding: 20px 14px;
+      }
+
+      .hero-temp-container {
+        flex-direction: row;
+      }
+
+      .hero-temp {
+        font-size: 3.8rem;
+      }
+
+      .hero-card {
+        padding: 22px 18px;
+      }
+    }
+  </style>
+</head>
+
+<body>
+  <!-- 賽博龐克背景層 -->
+  <div class="noise"></div>
+  <div class="scanlines"></div>
+
+  <div id="loading" class="loading-screen">
+    <div class="emoji">☁️</div>
+    <p>CONNECTING TO CYBER WEATHER CORE...</p>
+  </div>
+
+  <div class="status-bar">
+    <div class="location-pill">📍 臺中</div>
+    <div id="updateTime" class="update-pill">UPDATING...</div>
+  </div>
+
+  <div class="container" id="mainContent" style="display: none;">
+
+    <div id="heroCard">
+    </div>
+
+    <h3 class="section-title">NEXT FORECAST</h3>
+    <div class="scroll-container" id="futureForecasts">
+    </div>
+
+  </div>
+
+  <script>
+    const API_URL = "https://cwaweather-backend-dongshih.zeabur.app/api/weather/kaohsiung";
+
+    function getWeatherIcon(weather) {
+      if (!weather) return "🌤️";
+      if (weather.includes("晴")) return "☀️";
+      if (weather.includes("多雲")) return "⛅";
+      if (weather.includes("陰")) return "☁️";
+      if (weather.includes("雨")) return "🌧️";
+      if (weather.includes("雷")) return "⛈️";
+      return "🌤️";
+    }
+
+    function getAdvice(rainProb, maxTemp) {
+      let rainIcon = "🌂";
+      let rainText = "不用帶傘";
+      if (parseInt(rainProb) > 30) {
+        rainIcon = "☂️";
+        rainText = "記得帶傘！";
+      }
+
+      let clothIcon = "👕";
+      let clothText = "舒適穿搭";
+      if (parseInt(maxTemp) >= 28) {
+        clothIcon = "🎽";
+        clothText = "短袖出發";
+      } else if (parseInt(maxTemp) <= 20) {
+        clothIcon = "🧥";
+        clothText = "加件外套";
+      }
+
+      return { rainIcon, rainText, clothIcon, clothText };
+    }
+
+    function getTimePeriod(startTime) {
+      const hour = new Date(startTime).getHours();
+      if (hour >= 5 && hour < 11) return "早晨";
+      if (hour >= 11 && hour < 14) return "中午";
+      if (hour >= 14 && hour < 18) return "下午";
+      if (hour >= 18 && hour < 23) return "晚上";
+      return "深夜";
+    }
+
+    function renderWeather(data) {
+      const forecasts = data.forecasts;
+      const current = forecasts[0];
+      const others = forecasts.slice(1);
+
+      // 1. 渲染 Hero Card (主畫面)
+      const advice = getAdvice(current.rain, current.maxTemp);
+      const period = getTimePeriod(current.startTime);
+      const avgTemp = Math.round((parseInt(current.maxTemp) + parseInt(current.minTemp)) / 2);
+
+      document.getElementById('heroCard').innerHTML = `
+        <div class="hero-card">
+          <div class="hero-period">${period}</div>
+          <div class="hero-temp-container">
+            <div class="hero-icon">${getWeatherIcon(current.weather)}</div>
+            <div class="hero-temp">${avgTemp}°</div>
+          </div>
+          <div class="hero-desc">${current.weather}</div>
+          
+          <div class="advice-grid">
+            <div class="advice-item">
+              <div class="advice-icon">${advice.rainIcon}</div>
+              <div class="advice-text">${advice.rainText}</div>
+              <div style="font-size:0.7rem; color:#999">降雨率 ${current.rain}</div>
+            </div>
+            <div class="advice-item">
+              <div class="advice-icon">${advice.clothIcon}</div>
+              <div class="advice-text">${advice.clothText}</div>
+              <div style="font-size:0.7rem; color:#999">最高溫 ${current.maxTemp}°</div>
+            </div>
+          </div>
+        </div>
+      `;
+
+      // 2. 渲染稍後預報 (包含明天判斷)
+      const scrollContainer = document.getElementById('futureForecasts');
+      scrollContainer.innerHTML = '';
+
+      const todayDate = new Date().getDate();
+
+      others.forEach(f => {
+        let p = getTimePeriod(f.startTime);
+
+        const fDate = new Date(f.startTime);
+        if (fDate.getDate() !== todayDate) {
+          p = "明天" + p;
+        }
+
+        scrollContainer.innerHTML += `
+          <div class="mini-card">
+            <div class="mini-time">${p}</div>
+            <div class="mini-icon">${getWeatherIcon(f.weather)}</div>
+            <div class="mini-temp">${f.minTemp}° - ${f.maxTemp}°</div>
+            <div style="font-size:0.8rem; color:#ccc; margin-top:5px;">💧${f.rain}</div>
+          </div>
+        `;
+      });
+
+      // 3. 右上角顯示今日日期
+      const now = new Date();
+      const month = now.getMonth() + 1;
+      const date = now.getDate();
+      const dayIndex = now.getDay();
+      const days = ["週日", "週一", "週二", "週三", "週四", "週五", "週六"];
+
+      document.getElementById('updateTime').textContent = `${month}月${date}日 ${days[dayIndex]}`;
+    }
+
+    async function fetchWeather() {
+      try {
+        const delayPromise = new Promise(resolve => setTimeout(resolve, 1500));
+        const fetchPromise = fetch(API_URL).then(res => res.json());
+
+        const [_, json] = await Promise.all([delayPromise, fetchPromise]);
+
+        if (json.success) {
+          renderWeather(json.data);
+
+          document.getElementById('loading').style.display = 'none';
+          document.getElementById('mainContent').style.display = 'block';
+        } else {
+          throw new Error("API Error");
+        }
+      } catch (e) {
+        console.error(e);
+        alert("天氣資料讀取失敗，CYBER WEATHER CORE 連線中斷！");
+      }
+    }
+
+    document.addEventListener("DOMContentLoaded", fetchWeather);
+  </script>
+</body>
+
+</html>
