更改訊息條

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         0 0 20px rgba(0, 246, 255, 0.7),
         0 0 40px rgba(255, 0, 255, 0.5);
       backdrop-filter: blur(18px);
-      overflow: hidden;
+      overflow: visible;
     }
 
     .hero-card::before,
